# 4dvisualizer

./: .gitignore  4dplan.md  4dplan.txt  CMakeLists.txt  Makefile  README.md  camera_manager.cc  camera_manager.h  cube.cc  cube_object.h  debug.h  fshader.glsl  input_handler.cc  input_handler.h  renderer.cc  renderer.h  shader_loader.cc  vshader.glsl  window_size.cc  window_size.h
docs/: 4d_rendering_flow.xml  4dplan.md  movable_4d_rendering_flow.xml
geometry/: 4d_math.cc  4d_math.h  CMakeLists.txt  geometry.cc  geometry.h  intersect.cc  intersect.h  intersect_debug.h  intersect_test.cc
lib/: 4d_math.cc  4d_math.h  CMakeLists.txt  Makefile  camera_manager.cc  camera_manager.h  errors.cc  errors.h  hyperplane_manager.cc  hyperplane_manager.h  key_manager.cc  key_manager.h  light.h  scan_codes.h  shader_loader.cc  shader_loader.h  state_debug.cc  state_debug.h  window_size.cc  world_loader.cc  world_loader.h
progs/3dcube/: CMakeLists.txt  cube.cc  fshader.glsl  input_handler.cc  input_handler.h  renderer.cc  renderer.h  vshader.glsl
progs/4dcube/: CMakeLists.txt  cube.cc  fshader.glsl  input_handler.cc  input_handler.h  light_fshader.glsl  light_vshader.glsl  renderer.cc  renderer.h  vshader.glsl  wireframe_vshader.glsl
progs/keycode_searcher/: CMakeLists.txt  key_input.cc  key_input.h  main.cc
progs/multicube/: CMakeLists.txt  color_fshader.glsl  color_vshader.glsl  cube.cc  input_handler.cc  input_handler.h  renderer.cc  renderer.h  wireframe_fshader.glsl
progs/multicube/worlds/: single_rotated_cube.world.yaml  trivial.world.yaml  two_cubes.world.yaml  two_cubes_different_size.world.yaml  two_rotated_cubes.world.yaml
thesis/: .gitignore  digital_thesis.ltx  thesis.ltx
